Bring back custom scrollbar, which doesn't see the cause of the width issue. It's more like a recent Chrome bug.

--- a/popup.css
+++ b/popup.css
@@ -1,12 +1,9 @@
-body {
+html, body, #container {
   font: 12px "Helvetica Neue", "Lucida Grande", Helvetica, Arial, sans-serif;
-  margin: 0px;
-  user-select: none;
-}
-
-#container {
-  margin: 0px;
   width: 320px;
+  margin: 0px;
+  padding: 0px;
+  user-select: none;
 }
 
 #search-container {
@@ -21,7 +18,6 @@ body {
   position: fixed;
   top: 0;
   width: calc(100% - 10px);
-
   background: #fff;
 }
 
@@ -164,7 +160,6 @@ img {
   color: #fff;
 }
 
-/*
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -179,4 +174,3 @@ img {
   background: rgba(204,204,204,0.2);
   box-shadow: inset 0 0 4px rgba(128,128,128,0.3);
 }
-*/
